Change colour to footer. Fix whitespace and alignment.

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@ body {
 
 }
 
+#hogwarts-image {
+    margin: 2rem 0 1rem 0;
+}
+
 p {
     font-size: 1.2rem;
 }
@@ -26,12 +30,11 @@ p {
 
 h1 {
     font-size: 3rem;
-    text-align: center;
     padding-bottom: 1rem;
 }
 
 h2 {
-    padding: 1rem 0rem 1rem 0rem;
+    padding: 2.5rem 0 1rem 0;
 }
 
 h3, h4 {
@@ -41,22 +44,17 @@ h3, h4 {
 /*------ List ------*/
 
 ul {
-    padding-left: 2rem;
+    padding-left: 1.2rem;
 }
 
 /*------ Footer ------*/
 
 #footer {
-    background-color: rgb(134, 166, 204);
+    background-color: rgb(141, 103, 109);
     padding: 1rem;
     margin-top: 2rem;
 }
 
 #footer a {
-    color: rgb(254, 236, 160);
-    text-decoration: none;
-}
-
-#footer a:visited {
-    color: rgb(86, 33, 25) ;
+    color: rgb(250, 242, 209);
 }
